k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  type: LoadBalancer
  selector:
    app: website
  ports:
    - protocol: TCP
      port: 80       # externe poort
      targetPort: 80 # container poort
  loadBalancerIP: 192.168.154.128
